<resources>
    <string name="app_name">Recepción</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="añadir">Añadir</string>
    <string name="consultar_reparaciones">Consultar reparaciones</string>
    <string name="consultar_agenda">Consultar agenda</string>
    <string name="añadir_cliente">Añadir cliente</string>
    <string name="consultar_cliente">Consulta cliente</string>
    <string name="añadir_reparacion">Ficha entrada vehículo</string>
    <string name="calendario">Calendario</string>
    <string name="modificar">Modificar</string>
    <string name="ficha_cliente">Ficha cliente</string>
    <string name="clientes_titulo">Clientes</string>
    <string name="reparaciones_titulo">Reparaciones</string>
    <string name="cuentas_titulo">Cuentas</string>
    <string name="repuestos_titulo">Respuestos - Piezas</string>
    <string name="resolver_titulo">Resolver</string>
    <string name="cuentas_mensuales">Cuentas del mes:</string>
    <string name="herramienta">Herramienta:</string>
    <string name="datos_herramientas">Datos herramientas</string>
    <string name="titulo_modifica_reparacion">Modifica reparación</string>
    <string name="falta_segundo_apellido">Hay que especificar un segundo apellido</string>
    <string name="nueva_matricula">Matrícula...</string>
    <string name="nuevo_modelo">Modelo...</string>
    <string name="nueva_marca">Marca...</string>
    <string name="nuevo_nombre">Nombre...</string>
    <string name="nuevo_primer_apellido">Primer apellido...</string>
    <string name="nuevo_segundo_apellido">Segundo apellido...</string>
    <string name="reinicia_busqueda">Reinicia búsqueda</string>
    <string name="busca_cliente">Nombre...</string>
    <string name="muestra_todo">Muestra todo</string>
    <string name="busqueda">Búsqueda</string>
    <string name="matricula_vehiculo">Matrícula...</string>
    <string name="marca_modelo_vehiculo">Marca - Modelo...</string>
    <string name="telefono_modifica_cliente">Teléfono...</string>
    <string name="nombre_apellidos">Nombre...</string>
    <string name="modifica_cliente">Modifica cliente</string>
    <string name="no_entradas_pendientes">No hay entradas pendientes para el día </string>
    <string name="no_entradas_resueltas">No hay entradas resueltas para el día </string>
    <string name="checkbox_reparaciones_pendientes">Pendientes</string>
    <string name="checkbox_reparaciones_resueltas">Resueltas</string>
    <string name="consulta_reparacion_hoy">Hoy</string>
    <string name="todo_el_historial">Todas</string>
    <string name="fecha_consulta">Fecha a consultar:</string>
    <string name="primer_apellido">Primer apellido:</string>
    <string name="segundo_apellido">Segundo apellido:</string>
    <string name="cuentas">Cuentas:</string>
    <string name="consulta_cuentas">Consulta cuentas</string>
    <string name="total_reparaciones_pendientes">Total pendientes:</string>
    <string name="total_entradas_reparaciones">Total entradas:</string>
    <string name="total_reparaciones_resueltas">Total resueltas:</string>
    <string name="total">Total</string>
    <string name="titulo_aviso">Atención</string>
    <string name="texto_elige_una_opcion">Para poder calcular la facturación hay que seleccionar una fecha previamente: \n
                    - Día: si se quieren calcular los beneficios de un día en concreto. \n
                    - Mes: si se quieren calcular los beneficios de un mes en concreto. \n
                    - Año: si se quieren calcular los beneficios de un año en concreto. \n</string>
    <string name="titulo_elige_año">Escoge año</string>
    <string name="titulo_elige_mes">Escoge mes</string>
    <string name="total_diario"> diario (€):</string>
    <string name="total_mes"> mensual (€):</string>
    <string name="total_anual">anual (€):</string>
    <string name="cuentas_dia">Cuentas del día </string>
    <string name="lista_clientes">Lista clientes</string>
    <string name="consulta">Consultar</string>
    <string name="facturacion">Facturación</string>
    <string name="separacion_vehiculos">-----------------------------------------------------------</string>
    <string name="añadir_vehiculo">Añadir vehículo</string>
    <string name="modificar_vehiculo">Modificar vehículo</string>
    <string name="eliminar_vehiculo">Eliminar vehículo</string>
    <string name="vehiculos">Vehículo/s</string>
    <string name="coste">Coste reparación (€):</string>
    <string name="dia">Día:</string>
    <string name="mes">Mes:</string>
    <string name="año">Año:</string>
    <string name="cambia_dia">Cambia</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="quita_ultimo">Deshacer</string>
    <string name="añade_otro_vehiculo">Añade</string>
    <string name="datos_personales">Datos personales</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="vehiculo">Vehículo:</string>
    <string name="telefono">Teléfono:</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="fecha_entrada">Fecha de entrada:</string>
    <string name="fecha_salida">Fecha de salida:</string>
    <string name="precio">Precio</string>
    <string name="reparacion">Reparación</string>
    <string name="recuento_dia_actual_reparaciones">Recuento de reparaciones</string>
    <string name="recuento_dia_actual_dinero">Recuento de dinero</string>
    <string name="hoy">Hoy:</string>
    <string name="ayer">Ayer:</string>
    <string name="dia_concreto">Día concreto</string>
    <string name="informacion_consultar">Información a consultar:</string>
    <string name="a_partir_del_dia">A partir del día</string>
    <string name="descripcion_reparacion">Descripción:</string>
    <string name="resumen_reparacion">Resumen:</string>
    <string name="matricula">Matrícula:</string>
    <string name="pendiente">Pendiente:</string>
    <string name="resuelto">Resuelto:</string>
    <string name="no_hoy_pendiente">No hay entradas pendientes para hoy</string>
    <string name="no_hoy_resueltas">No hay entradas resueltas para hoy</string>
    <string name="no_ayer_pendiente">No hay entradas pendientes para ayer</string>
    <string name="no_ayer_resueltas">No hay entradas resueltas para ayer</string>
    <string name="resolucion">Resolución:</string>
    <string name="resolucion_menu">Resolución</string>
    <string name="datos_resolucion">Datos de la resolución</string>
    <string name="cliente">Datos del cliente:</string>
    <string name="recuperar_cliente">Recuperar</string>
    <string name="crear_cliente">Crear</string>
    <string name="resolver_reparacion">Resolver reparación</string>
    <string name="datos_ingreso_reparacion">Datos de la reparación:</string>
    <string name="datos_ingreso_vehiculo">Datos del vehículo:</string>
    <string name="reparaciones_pendientes">Reparaciones pendientes:</string>
    <string name="texto_custom_dialog">Estás a punto de salir sin guardar. ¿Estás seguro?</string>
    <string name="confirmacion">Confirmación</string>
    <string name="texto_custom_dialog_eliminar_elemento">Estás a punto de eliminar una entrada de
        un vehículo. ¿Estás seguro?</string>
    <string name="falta_nombre">Hay que especificar un nombre</string>
    <string name="falta_primer_apellido">Hay que especificar un apellido</string>
    <string name="falta_telefono">Hay que especificar un número de teléfono</string>
    <string name="falta_matricula">Hay que especificar una matrícula</string>
    <string name="falta_modelo">Hay que especificar un modelo</string>
    <string name="falta_marca">Hay que especificar una marca</string>
    <string name="no_resultados">No se han encontrado resultados</string>
    <string name="error_resultados">Se ha producido un error</string>
    <string name="vincular_cuenta">Vincular cuenta de correo</string>
    <string name="title_activity_add_cliente">AddClienteActivity</string>
</resources>