<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/añadir">
        <menu>
            <item
                android:id="@+id/nav_add_cliente"
                android:icon="@drawable/ic_add_cliente"
                android:title="@string/añadir_cliente" />
            <item
                android:id="@+id/nav_add_entrada"
                android:icon="@drawable/ic_add_entrada"
                android:title="@string/añadir_reparacion" />
        </menu>
    </item>

    <item android:title="@string/resolucion_menu">
        <menu>
            <item
                android:id="@+id/nav_res_entrada"
                android:icon="@drawable/ic_hecho"
                android:title="@string/resolver_reparacion" />
        </menu>
    </item>

    <item android:title="@string/consulta">
        <menu>
            <item
                android:id="@+id/nav_consulta_cliente"
                android:icon="@drawable/ic_person_black"
                android:title="@string/consultar_cliente" />
            <item
                android:id="@+id/nav_consulta_reparacion"
                android:icon="@drawable/ic_list"
                android:title="@string/consultar_reparaciones" />
        </menu>
    </item>
</menu>
