<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ot.jgomez.recepcion.views.main.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/hoy_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hoy"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hoy_pendiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hoy_title"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/pendiente"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/no_hoy_pendiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hoy_pendiente"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/no_hoy_pendiente" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_consulta_reparacion_pendiente_hoy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_hoy_pendiente"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        tools:listitem="@layout/consulta_reparaciones_item_list" />

    <TextView
        android:id="@+id/hoy_resuelto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_consulta_reparacion_pendiente_hoy"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/resuelto"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/no_hoy_resuelto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hoy_resuelto"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/no_hoy_resueltas" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_consulta_reparacion_resuelta_hoy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_hoy_resuelto"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        tools:listitem="@layout/consulta_reparaciones_item_list" />

    <TextView
        android:id="@+id/ayer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_consulta_reparacion_resuelta_hoy"
        android:text="@string/ayer"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ayer_pendiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ayer_title"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/pendiente"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/no_ayer_pendiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ayer_pendiente"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/no_ayer_pendiente" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_consulta_reparacion_pendiente_ayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_ayer_pendiente"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        tools:listitem="@layout/consulta_reparaciones_item_list" />

    <TextView
        android:id="@+id/ayer_resuelto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_consulta_reparacion_pendiente_ayer"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/resuelto"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/no_ayer_resueltas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ayer_resuelto"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/no_ayer_resueltas" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_consulta_reparacion_resuelta_ayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_ayer_resueltas"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        tools:listitem="@layout/consulta_reparaciones_item_list" />

</RelativeLayout>
